# video-subtitle-extractor

./: .gitignore  LICENSE  README.md  gradle.properties  local.properties.example  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/ocr/paddle/: README.md
app/src/main/cpp/: CMakeLists.txt  ocr_pipeline.cpp  ocr_pipeline.h  paddle_native.cpp
app/src/main/java/com/shinprogram/subextract/: MainActivity.kt  SubExtractApp.kt
app/src/main/java/com/shinprogram/subextract/di/: AppModule.kt
app/src/main/java/com/shinprogram/subextract/ocr/: FrameSampler.kt  MlKitOcrEngine.kt  OcrEngine.kt  SrtGenerator.kt  SubtitleExtractor.kt  TextFilter.kt
app/src/main/java/com/shinprogram/subextract/translate/: GeminiClient.kt  TranslationRepositoryImpl.kt
app/src/main/java/com/shinprogram/subextract/work/: OcrWorker.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/shinprogram/subextract/ocr/: SrtGeneratorTest.kt  TextFilterTest.kt
gradle/: libs.versions.toml
scripts/: download_paddle_models.sh
subtitle-translator-desktop/: .gitignore  README.md  main.py  requirements.txt  subtitle_translator.spec
subtitle-translator-desktop/app/: __init__.py  config.py  gemini_api.py  subtitle_parser.py  video_player.py
subtitle-translator-desktop/app/ui/: main_window.py  settings_dialog.py  styles.py  workers.py
(+24 files in other folders)
